instance/common/kustomize/kubeflow-applications/patches/common-dashboard-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centraldashboard
spec:
  template:
    spec:
      containers:
      - name: centraldashboard
