instance/common/kustomize/kubeflow-applications/patches/katib-db-manager-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
spec:
  template:
    spec:
      containers:
      - name: katib-db-manager
