instance/common/kustomize/kubeflow-applications/patches/metadata-envoy-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-envoy-deployment
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
      - args:
        - /etc/envoy.yaml
        - --base-id 2
        name: container
