instance/common/kustomize/kubeflow-applications/patches/kfserving-controller-manager-metrics-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
  name: kfserving-controller-manager-metrics-service
  namespace: kubeflow
spec:
  selector:
    control-plane: kfserving-controller-manager
    controller-tools.k8s.io: "1.0"
