instance/common/kustomize/kubeflow-applications/patches/minio-gcs-gateway-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
