instance/common/kustomize/kubeflow-applications/patches/istio-vs-patches.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard
spec:
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: centraldashboard.$(namespace).svc.$(clusterDomain)
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-ui
spec:
  http:
    - match:
        - uri:
            prefix: /argo/
      rewrite:
        uri: /
      route:
        - destination:
            host: argo-ui.$(namespace).svc.$(clusterDomain)
---
